hover links dash fixed spacing

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -63,11 +63,11 @@ ul {
   overflow: auto;
   background-color: #fff;  
   padding: 5px;
+  border-bottom: 3px solid red;
 }
 
 .dashboard-articles {
   float: left;
-  margin: 5px;
   display: inline-block; 
 }
 
@@ -99,6 +99,10 @@ ul {
   margin-top: 0 !important;
   margin-bottom: 5px; 
   float: left;
+}
+
+.dashboard-articles li h3 a:hover {
+  color: red !important;
 }
 
 .my-article img {
@@ -153,8 +157,8 @@ ul {
 
 .col-dashboard-photos {
   display: inline-block;
-  margin-left: 12px;
   width: 100%;
+  border-bottom: 3px solid red;
 }
 
 /****** PHOTOS ******/
@@ -174,8 +178,8 @@ ul {
 }
 
 .dash-photo {
-  height: 215px;
-  border: 13px solid white;
+  height: 230px;
+  border: 10px solid white;
 }
 
 .dash-photo:hover {
@@ -183,12 +187,11 @@ ul {
 }
 
 .dashboard-photos li img {
-  height: 180px;
-  width: 250px;
+  height: 200px;
+  width: 260px;
   opacity: .000001;
   padding: 2px;
   margin: auto;
-  border: 5px solid white;
 }
 
 .dashboard-photos .photo button {
@@ -227,7 +230,6 @@ ul {
   font-family: 'Oswald';
 }
 
-
 .individual-tweet-dash {
   text-align: left;
   padding: 10px;
@@ -260,9 +262,15 @@ ul {
 .dashboard-tweets1 h3 a,
 .dashboard-tweets2 h3 a,
 .dashboard-tweets3 h3 a {
-  color: #003399 !important;
   font-size: 20px; 
-  font-family: Oswald;   
+  font-family: Oswald;
+  color: #003399;   
+}
+
+.dashboard-tweets1 h3 a:hover,
+.dashboard-tweets2 h3 a:hover,
+.dashboard-tweets3 h3 a:hover {
+  color: red;
 }
 
 .dashboard-tweets1 button,
